@@ -27,6 +27,7 @@ if [istarget "ia64-*"] then {
     run_dump_test "pseudo"
     run_dump_test "nop_x"
     run_dump_test "mov-ar"
+    run_list_test "operands" ""
 
     run_list_test "dv-raw-err" ""
     run_list_test "dv-waw-err" ""
